# prophet

./: README.md  pyproject.toml
prophet/: main.py  runner.py
prophet/models/: __init__.py  answer_generator.py  load_index.py  pre_processor.py
prophet/pickles/: 2022.pdf.pkl  2023.pdf.pkl
